# agentic-ai-playground

./: .env.example  .gitignore  .pre-commit-config.yaml  AGENTS.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  opencode.json  pyproject.toml
.github/: dependabot.yml  labels.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
config/: agents.toml  evaluations.toml  graphs.toml  mcp_providers.toml  providers.toml  public_profiles.toml  swarms.toml  tool_groups.toml
config/agents/: planner.md  scout.md  worker.md
config/prompts/: review.md  summarize.md
config/skills/bugfix/: SKILL.md
config/skills/refactor/: SKILL.md
config/skills/review/: SKILL.md
docs/: PRP-PLAN-TEMPLATE.md  PRP-README.md  README.md  building-blocks.md  compaction.md  debugging-workflow.md  extensions.md  operations.md  sessions.md  setup.md  skills-prompts.md  vision.md
docs/architecture/: decisions.md
docs/examples/extensions/: README.md
docs/prompts/: deep-research-refactor-prompt.md
docs/research/: inspiration-dossier.md  inspiration-pattern-map.md  pi-mono-pattern-map.md  pi-mono.md  playground-baseline.md
frontend/: .dockerignore  Dockerfile.api  Dockerfile.web  compose.logs.yaml  compose.watch.yaml  compose.yaml  eslint.config.js  package.json  playwright.config.ts  pnpm-lock.yaml  vitest.config.ts
frontend/apps/web/: .env.example  .gitignore  index.html  package.json  vite.config.ts  vitest.config.ts
frontend/apps/web/src/: App.module.css  App.tsx  main.tsx
frontend/apps/web/src/__tests__/: App.test.tsx
frontend/apps/web/src/components/: MarkdownText.module.css  MarkdownText.tsx  QueuedComposerControls.tsx  SessionTreePanel.module.css  SessionTreePanel.tsx  SettingsPanel.module.css  SettingsPanel.tsx  SlashCommandMenu.tsx  ThreadList.module.css  ThreadList.tsx  ThreadNotFound.module.css  ThreadNotFound.tsx  ThreadView.module.css  ThreadView.tsx  TracePanel.module.css  TracePanel.tsx
frontend/apps/web/src/components/__tests__/: MarkdownText.test.tsx  QueuedComposerControls.test.tsx  SessionTreePanel.test.tsx  SettingsPanel.test.tsx  SlashCommandMenu.test.tsx  ThreadView.test.tsx  TracePanel.test.tsx
frontend/apps/web/src/contexts/: ResourcesContext.tsx  SessionTreeContext.tsx  SettingsContext.tsx  TraceContext.tsx
frontend/apps/web/src/hooks/: index.ts  usePhoenixLinks.ts  useResizableSidebar.ts  useTheme.ts
frontend/apps/web/src/state/: appDataContext.tsx  appDataMachine.ts  appShellContext.tsx  appShellMachine.ts  composerQueueMachine.ts  layoutContext.tsx  layoutMachine.ts  overridesContext.tsx  overridesMachine.ts  sessionTreeMachine.ts  themeContext.tsx  themeMachine.ts  traceMachine.ts  useOverrides.ts
frontend/apps/web/src/styles/: base.css  overrides.css
frontend/apps/web/src/utils/: commands.ts
frontend/apps/web/tests/e2e/: api.spec.ts  chat.spec.ts  helpers.ts  modes.spec.ts  tool-calls.spec.ts
frontend/backend/: README.md  pyproject.toml
frontend/backend/src/assistant_web_backend/: __init__.py  dependencies.py  main.py  storage.py
frontend/backend/src/assistant_web_backend/models/: __init__.py  base.py  config.py  messages.py  profiles.py  resources.py  sessions.py  threads.py
frontend/backend/src/assistant_web_backend/routes/: __init__.py  chat.py  config.py  threads.py
frontend/backend/src/assistant_web_backend/services/: __init__.py  bedrock_metadata.py  chat_runner.py  message_codec.py  phoenix.py  request_context.py  resources.py  runtime.py  session_tree.py  settings.py  streaming.py
frontend/backend/tests/: conftest.py  test_backend_caches.py  test_request_id.py  test_resources_api.py  test_runtime_service.py  test_session_tree_api.py  test_settings_api.py  test_streaming_state.py  test_threads_api.py
frontend/nginx/: nginx.conf
scripts/: bootstrap_config.py  debug_tui_runtime.py  e2e_tests.py  pre-push-checks.sh  restart_frontend_compose.py  setup_bedrock_iam.py  setup_phoenix.py  test_agents.py
scripts/hooks/: pre-push
scripts/iam/: README.md  bedrock-agentcore-policy.json
src/agentic_ai_playground/: __init__.py
(+18 files in other folders)
